wroking es5 proj setup

--- a/index.htm
+++ b/index.htm
@@ -5,8 +5,8 @@
     <title>smooth timer</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/timer.css" rel="stylesheet">
-    <script src="js/timer.js"></script>
+    <link href="./css/timer.css" rel="stylesheet">
+    <script src="./js/timer.js"></script>
 </head>
 
 <body>
