--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./css/timer.css" rel="stylesheet">
-    <script src="./js/timer.js"></script>
+    <!--<script src="./js/timer.js"></script>-->
+    <script src="./js/app.js"></script>
 </head>
 
 <body>
