first react render trys

--- a/index.htm
+++ b/index.htm
@@ -11,20 +11,7 @@
 </head>
 
 <body>
-    <div id="container">
-        <h1>Tie'M clock / timer</h1>
-        <canvas id="clock" width="300" height="300" style="border:1px solid #d3d3d3;">Your browser does not support the HTML5 canvas tag.</canvas>
-        <div id="buttons">
-            <div class="buttons">
-                <div id='button1' class="button">clock</div>
-                <div id='button2' class="button">timer</div>
-            </div>
-            <div class="buttons">
-                <div id='button3' class="button">energy saving mode</div>
-                <div id='button4' class="button">reset timer</div>
-            </div>
-        </div>
-    </div>
+    <div id="app"></div>
 </body>
 
 </html>
